# mephi-labs-anti-plagiarism

./: .clangd  .gitignore  CMakeLists.txt  docker-compose.yml
Front/: README.md  api.js  index.html  script.js  styles.css
ai_model/: DFG_cpp.py  README.md  SERVICE.md  app.py  baseline_eval.py  dfg_utils.py  graphcodebert_dfg_encoder.py  requirements.txt
ai_model/api/: main.py
back/: API.md  Dockerfile  README.md  requirements.txt
back/algos/: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt
back/algos/include/antiplag/algos/: detectors.hpp  result.hpp  tokenizer.hpp
back/algos/src/: cli.cpp  detectors.cpp  tokenizer.cpp
back/algos/tests/: algos_test.cpp
back/algos/tools/: evaluate_dataset.cpp
back/api/: config.py  main.py  repository.py  schemas.py  storage.py
back/worker/: ai_client.py  check_processor.py  classic_client.py  jobs.py  queue.py  run_worker.py  source_reader.py
test_data/: labels.npy  metrics.csv  pairs.csv  programs.csv  sims_dfg.npy  sims_ndfg.npy
